[package]
name = "mmapfile"
version = "0.1.0"
authors = ["Kaspar Schleiser <kaspar@schleiser.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
bytemuck = "1.7.0"
mmarinus = { git = "https://github.com/kaspar030/mmarinus", branch = "make_embeddable" }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
temp_testdir = "0.2"
